accidentally spotted an error related to currency overlay that caused the buttons to not work bcs they had lower z-index, and it got fixed

--- a/src/components/CurrencySwitcher/CurrencySwitcher.scss
+++ b/src/components/CurrencySwitcher/CurrencySwitcher.scss
@@ -5,7 +5,8 @@
     height: auto;
     background-color: white;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    z-index: 10;
+    z-index: 30;
+
     &__item {
         width: 100%;
         height: 5rem;
@@ -14,14 +15,17 @@
         align-items: center;
         justify-content: center;
         cursor: pointer;
+
         &:not(:last-of-type) {
             margin: 1rem 0;
         }
+
         &__icon {
             width: 2rem;
             height: 2rem;
             margin-right: .5rem;
         }
+
         &__text {
             font-weight: 500;
         }
